# nilockin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
hooks/: pre-commit
src/nilockin/: __main__.py  app.py  daq.py  lockin.py  worker.py
tests/: test_lockin.py  test_placeholder.py
